        - Fix incorrect collapsing-parser source being generated in the
          presence of unicode data among the collapse-points
        - Fix endless loop on BareSourcelessResultClass->throw_exception(...)
        - Fix hang in t/72pg.t when run against DBD::Pg 3.5.0. The ping()
          implementation changes due to RT#100648 made an alarm() based
          timeout lock-prone.

    * Misc
        - Skip tests in a way more intelligent and speedy manner when optional
          dependencies are missing
        - Make the Optional::Dependencies error messages cpanm-friendly
        - Incompatibly change values (not keys) of the hash returned by
          Optional::Dependencies::req_group_list (no known users in the wild)
        - Depend on newer SQL::Abstract (fixing overly-aggressive parenthesis
          opener: RT#99503)
        - Depend on newer Moo, fixing some interoperability issues:
          http://lists.scsys.co.uk/pipermail/dbix-class/2014-October/011787.html
        - Fix intermittent failures in the LeakTracer on 5.18+

0.082801 2014-10-05 23:55 (UTC)
    * Known Issues
        - Passing large amounts of objects with stringification overload
          directly to DBIx::Class may result in strange action at a distance
          exceptions. More info (and a workaround description) can be found
          under "Note" at https://metacpan.org/pod/SQL::Abstract#is_plain_value
        - The relationship condition resolution fixes come with the side effect
          of returning more complete data, tripping up *some* users of an
          undocumented but widely used internal function. In particular
          https://rt.cpan.org/Ticket/Display.html?id=91375#txn-1407239

    * Notable Changes and Deprecations
        - DBIC::FilterColumn now properly bypasses \'' and \[] literals, just
          like the rest of DBIC
        - DBIC::FilterColumn "from_storage" handler is now invoked on NULLs
          returned from storage